--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.12.2",
+        "lodash": "^4.17.21"
     }
 }
